2009-07-03  Dan Nicolaescu  <dann@ics.uci.edu>

	* configure.in (--enable-profiling): New option.

2009-06-27  Glenn Morris  <rgm@gnu.org>

	* configure: Restore netbsd on mips, mipsel, mipseb.

2009-06-26  Dan Nicolaescu  <dann@ics.uci.edu>

	* configure.in (--enable-checking): New option.

2009-06-24  Glenn Morris  <rgm@gnu.org>

	* make-dist: Warn if subdir does not exist in source.
	(nextstep/Cocoa/Emacs.base/Contents/Resources/preferences.nib)
	(nextstep/GNUstep/Emacs.base/Resources/preferences.gorm):
	No longer make links.

2009-06-24  Yavor Doganov  <yavor@gnu.org>

	* make-dist (tempdir): Don't create directories preferences.gorm
	and preferences.nib, they are no longer required.

2009-06-21  Chong Yidong  <cyd@stupidchicken.com>

	* Branch for 23.1.

2009-06-12  Chong Yidong  <cyd@stupidchicken.com>

	* configure.in: Delete mac-fix-env target, which has been
	removed (Bug#3531).

2009-05-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* configure.in: Don't define CANNOT_DUMP for GNUStep any more.

2009-05-05  Per Starbäck  <per@starback.se>  (tiny change)

	* BUGS: Use new binding of view-emacs-problems.

2009-05-04   Simon Leinen  <simon.leinen@switch.ch>  (tiny change)

	* Makefile.in (install-arch-dep): Avoid using $$(..) construct,
	for Solaris compatibility.

2009-04-25  Chong Yidong  <cyd@stupidchicken.com>

	* configure: Regenerate.

	* configure.in: Disable use of FreeType without libXft.

2009-04-19  Jan Djärv  <jan.h.d@swipnet.se>

	* configure.in (HAVE_GTK_FILE_SELECTION, HAVE_GTK_FILE_CHOOSER):
	Check if it is declared in gtk.h.

2009-04-12  Andreas Schwab  <schwab@linux-m68k.org>

	* Makefile.in (install-arch-indep): Remove .gitignore files.

2009-04-03  Kenichi Handa  <handa@m17n.org>

	* INSTALL: Make the section "Complex Text Layout support
	libraries" the first of "ADDITIONAL DISTRIBUTION FILES".

2009-03-06  Dan Nicolaescu  <dann@ics.uci.edu>

	* configure.in (rs6000-ibm-aix6*): Fix typo.

2009-03-04  Glenn Morris  <rgm@gnu.org>
