@@ -406,9 +406,9 @@ dnl see the `changequote' comment above.
     case "${canonical}" in
       alpha*-*-netbsd*)	machine=alpha ;;
       i[3456]86-*-netbsd*) machine=intel386 ;;
-      mips-*-netbsd*)	machine=pmax ;;
-      mipsel-*-netbsd*)	machine=pmax ;;
-      mipseb-*-netbsd*)	machine=pmax ;;
+      mips-*-netbsd*)	machine=mips ;;
+      mipsel-*-netbsd*)	machine=mips ;;
+      mipseb-*-netbsd*)	machine=mips ;;
       powerpc-*-netbsd*) machine=macppc ;;
       sparc*-*-netbsd*)	machine=sparc ;;
       vax-*-netbsd*)	machine=vax ;;
