@@ -1,3 +1,8 @@
+2009-07-03  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* m/mips.h: Mention this file is also used for netbsd.
+	* m/pmax.h: Remove file.
+
 2009-07-03  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* xterm.h (struct x_display_info): Add invisible_cursor.
